Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <section id="about">
         <div class="container">
             <div class="about-content">
-                <img src="profile.jpg" alt="Maisha Binte Rashid" class="profile-image">
+                <img src="pp.jpg" alt="Maisha Binte Rashid" class="profile-image">
                 <div class="bio">
                     <h3>Maisha Binte Rashid</h3>
                     <p class="title">Ph.D. Candidate, Computer Science, Baylor University</p>
@@ -378,7 +378,7 @@
                     <div class="social-links">
                         <a href="mailto:maishabrashid05@gmail.com">📧 Email</a>
                         <a href="https://www.linkedin.com/in/maisha-binte-rashid" target="_blank">💼 LinkedIn</a>
-                        <a href="https://github.com/maisha05" target="_blank">💻 GitHub</a>
+                        <a href="https://github.com/maishabrashid" target="_blank">💻 GitHub</a>
                         <a href="ResumeMaishaBinteRashid.pdf" download class="cv-button">📄 Download CV</a>
                     </div>
                 </div>
@@ -531,7 +531,7 @@
                 <p><strong>Phone:</strong> 254-224-2825</p>
                 <p><strong>Location:</strong> Waco, Texas</p>
                 <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/maisha-binte-rashid" target="_blank">linkedin.com/in/maisha-binte-rashid</a></p>
-                <p><strong>GitHub:</strong> <a href="https://github.com/maisha05" target="_blank">github.com/maisha05</a></p>
+                <p><strong>GitHub:</strong> <a href="https://github.com/maishabrashid" target="_blank">github.com/maishabrashid</a></p>
             </div>
         </div>
     </section>
@@ -560,3 +560,4 @@
     </script>
 </body>
 </html>
+
