Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         <a href="mailto:maishabrashid05@gmail.com">📧 Email</a>
                         <a href="https://www.linkedin.com/in/maisha-binte-rashid" target="_blank">💼 LinkedIn</a>
                         <a href="https://github.com/maishabrashid" target="_blank">💻 GitHub</a>
-                        <a href="ResumeMaishaBinteRashid.pdf" download class="cv-button">📄 Download CV</a>
+                        <a href="ResumeMaishaBinteRashid.pdf" target="_blank" class="cv-button">📄 View CV</a>
                     </div>
                 </div>
             </div>
@@ -560,4 +560,5 @@
     </script>
 </body>
 </html>
+
 
