Update the publications section

--- a/index.html
+++ b/index.html
@@ -421,41 +421,69 @@
     <section id="publications">
         <div class="container">
             <h2>Publications</h2>
+
+            <div class="publication">
+                <h3>A Framework for Evaluating Vision-Language Model Safety: Building Trust in AI for Public Sector Applications</h3>
+                <p class="authors">M. Rashid, P. Rivas</p>
+                <p class="venue">AAAI 2025 Workshop on AI for Social Impact: Bridging Innovations in Finance, Social Media, and Crime Prevention</p>
+                <div class="links">
+                    <a href="https://arxiv.org/pdf/2502.16361" target="_blank">Paper</a>
+                </div>
+            </div>
             
             <div class="publication">
                 <h3>AI Safety in Practice: Enhancing Adversarial Robustness in Multimodal Image Captioning</h3>
                 <p class="authors">M. Rashid, P. Rivas</p>
-                <p class="venue">Ethical AI Workshop at ACM KDD'24, 2024</p>
+                <p class="venue">In Proceedings of ACM KDD 2024 (KDD ’24). ACM, New York, NY, USA</p>
                 <div class="links">
-                    <a href="https://arxiv.org/abs/2407.07174" target="_blank">Paper</a>
+                    <a href="https://arxiv.org/pdf/2407.21174" target="_blank">Paper</a>
                 </div>
             </div>
 
             <div class="publication">
-                <h3>Navigating the Multimodal Landscape: A Review on Integration of Text and Image Data in Machine Learning Architectures</h3>
+                <h3>Leveraging OpenFlamingo for Multimodal Embedding Analysis of C2C Car Parts Data</h3>
+                <p class="authors">M. Rashid, P. Rivas</p>
+                <p class="venue">World Congress in Computer Science, Computer Engineering & Applied Computing (Springer Nature Switzerland), July 22, 2024</p>
+                <div class="links">
+                    <a href="https://arxiv.org/pdf/2503.17408" target="_blank">Paper</a>
+                </div>
+            </div>
+
+            <div class="publication">
+                <h3>Navigating the multimodal landscape: A review on integration of text and image data in machine learning architectures</h3>
                 <p class="authors">M. Rashid, MS Rahaman, P. Rivas</p>
                 <p class="venue">Machine Learning and Knowledge Extraction Journal</p>
+                <div class="links">
+                    <a href="https://www.mdpi.com/2504-4990/6/3/74" target="_blank">Paper</a>
+                </div>
             </div>
 
             <div class="publication">
                 <h3>Scoping Review on Image-Text Multimodal Machine Learning Models</h3>
                 <p class="authors">M. Rashid, P. Rivas</p>
-                <p class="venue">2023 International Conference on Computational Science and Computational Intelligence (CSCI), 2023</p>
+                <p class="venue">International Conference on Computational Science and Computational Intelligence (CSCI), 2023</p>
                 <div class="links">
-                    <a href="https://ieeexplore.ieee.org/document/10563946" target="_blank">Paper</a>
+                    <a href="https://www.rivas.ai/pdfs/rashid2023scoping.pdf" target="_blank">Paper</a>
                 </div>
             </div>
 
             <div class="publication">
-                <h3>Autonomous Deblurring Images and Information Extraction from Documents using CycleGAN and Mask RCNN</h3>
+                <h3>Autonomous deblurring images and information extraction from documents using CycleGAN and mask RCNN</h3>
                 <p class="authors">O. Hoque, M. Rashid, T. Zawad</p>
-                <p class="venue">23rd International Conference on Computer and Information Technology (ICCIT)</p>
+                <p class="venue">23rd International Conference on Computer and Information Technology (ICCIT) (IEEE), 2020 </p>
+                <div class="links">
+                    <a href="https://www.researchgate.net/profile/K-M-Tawsik-Jawad/publication/351290151_Autonomous_Deblurring_Images_and_Information_Extraction_from_Documents_Using_CycleGAN_and_Mask_RCNN/links/628bcd913303d263c471e7d5/Autonomous-Deblurring-Images-and-Information-Extraction-from-Documents-Using-CycleGAN-and-Mask-RCNN.pdf" target="_blank">Paper</a>
+                </div>
+                
             </div>
 
             <div class="publication">
-                <h3>Targeted Face Recognition and Alarm Generation for Security Surveillance using Single Shot Multibox Detector (SSD)</h3>
-                <p class="authors">M. Rashid, T. Zawad, S. Nazmus</p>
-                <p class="venue">International Journal of Computer Applications</p>
+                <h3>Targeted face recognition and alarm generation for security surveillance using single shot multibox detector (SSD)</h3>
+                <p class="authors">T Jawad, B Maisha, S Nazmus</p>
+                <p class="venue">Int. J. Comput. Appl, 2019</p>
+                <div class="links">
+                    <a href="https://www.researchgate.net/profile/Nazmus-Sakib-71/publication/338013347_Targeted_Face_Recognition_and_Alarm_Generation_for_Security_Surveillance_using_Single_Shot_Multibox_Detector_SSD/links/61a836bdca2d401f27b93f98/Targeted-Face-Recognition-and-Alarm-Generation-for-Security-Surveillance-using-Single-Shot-Multibox-Detector-SSD.pdf" target="_blank">Paper</a>
+                </div>
             </div>
         </div>
     </section>
@@ -560,5 +588,6 @@
     </script>
 </body>
 </html>
+
 
 
