update-welcome-message

--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@
             <div class="about-content">
                 <img src="pp.jpg" alt="Maisha Binte Rashid" class="profile-image">
                 <div class="bio">
-                    <h3>Maisha Binte Rashid</h3>
+                    <h3><b>Maisha Binte Rashid</b></h3>
                     <p class="title">Ph.D. Candidate, Computer Science, Baylor University</p>
                     <p>
-                        I am a Ph.D. candidate in Computer Science at Baylor University, specializing in multimodal machine learning 
+                        Welcome! My name is Maisha and I am a Ph.D. candidate in Computer Science at Baylor University, where I am advised by Pablo Rivas. I am part of the <a href="https://www.rivas.ai/" target="_blank">Rivas Lab</a>, specializing in multimodal machine learning 
                         and AI robustness. My research focuses on integrating text and image data to defend against adversarial attacks, 
                         with particular expertise in large-scale language models (LLMs), natural language processing, and deep learning.
                     </p>
@@ -555,7 +555,7 @@
         <div class="container">
             <h2>Contact</h2>
             <div class="contact-info">
-                <p><strong>Email:</strong> <a href="mailto:maishabrashid05@gmail.com">maishabrashid05@gmail.com</a></p>
+                <p><strong>Email:</strong> maishabrashid05(at)gmail.com</a></p>
                 <p><strong>Location:</strong> Waco, Texas</p>
                 <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/maisha-binte-rashid" target="_blank">linkedin.com/in/maisha-binte-rashid</a></p>
                 <p><strong>GitHub:</strong> <a href="https://github.com/maishabrashid" target="_blank">github.com/maishabrashid</a></p>
@@ -587,6 +587,7 @@
     </script>
 </body>
 </html>
+
 
 
 
