--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         <div class="container">
             <h2>Contact</h2>
             <div class="contact-info">
-                <p><strong>Email:</strong> maishabrashid05(at)gmail.com</a></p>
+                <p><strong>Email:</strong> maishabrashid05[at]gmail.com</a></p>
                 <p><strong>Location:</strong> Waco, Texas</p>
                 <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/maisha-binte-rashid" target="_blank">linkedin.com/in/maisha-binte-rashid</a></p>
                 <p><strong>GitHub:</strong> <a href="https://github.com/maishabrashid" target="_blank">github.com/maishabrashid</a></p>
@@ -587,6 +587,7 @@
     </script>
 </body>
 </html>
+
 
 
 
