Added the new section

--- a/index.html
+++ b/index.html
@@ -273,23 +273,23 @@
             color: #555;
         }
 
-        /* Contact Section */
-        .contact-info {
+        /* News Section */
+        .news-info {
             display: flex;
             flex-direction: column;
             gap: 1rem;
         }
 
-        .contact-info p {
+        .news-info p {
             font-size: 1.1rem;
         }
 
-        .contact-info a {
+        .news-info a {
             color: #3498db;
             text-decoration: none;
         }
 
-        .contact-info a:hover {
+        .news-info a:hover {
             text-decoration: underline;
         }
 
@@ -340,10 +340,11 @@
             <h1>Maisha Binte Rashid</h1>
             <ul>
                 <li><a href="#about">About</a></li>
+                <li><a href="#News">News</a></li>
                 <li><a href="#research">Research</a></li>
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                
             </ul>
         </div>
     </nav>
@@ -382,6 +383,24 @@
                         <a href="ResumeMaishaBinteRashid.pdf" target="_blank" class="cv-button">📄 View CV</a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- News Section -->
+    <section id="news">
+        <div class="container">
+            <h2>News</h2>
+            <div class="news-info">
+                <p>
+                <strong>Presenting at WiML@NeurIPS 2025:</strong> 
+                I'll be presenting "<em>Understanding Adversarial Weakness in Vision-Language Models</em>" 
+                at WiML Workshop @ NeurIPS 2025 in San Diego, California 
+                (Dec 2, 
+                <a href="https://openreview.net/forum?id=xQQ87B2I3j" target="_blank">
+                    Link
+                </a>).
+            </p>
             </div>
         </div>
     </section>
@@ -550,19 +569,6 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <h2>Contact</h2>
-            <div class="contact-info">
-                <p><strong>Email:</strong> maishabrashid05[at]gmail.com</a></p>
-                <p><strong>Location:</strong> Waco, Texas</p>
-                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/maisha-binte-rashid" target="_blank">linkedin.com/in/maisha-binte-rashid</a></p>
-                <p><strong>GitHub:</strong> <a href="https://github.com/maishabrashid" target="_blank">github.com/maishabrashid</a></p>
-            </div>
-        </div>
-    </section>
-
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -587,6 +593,7 @@
     </script>
 </body>
 </html>
+
 
 
 
