update the alignment issue

--- a/index.html
+++ b/index.html
@@ -393,13 +393,15 @@
             <h2>News</h2>
             <div class="news-info">
                 <p>
-                <strong>Presenting at WiML@NeurIPS 2025:</strong> 
+                <strong>Presenting at WiML@NeurIPS 2025:</strong>
+                <p>
                 I'll be presenting "<em>Understanding Adversarial Weakness in Vision-Language Models</em>" 
                 at WiML Workshop @ NeurIPS 2025 in San Diego, California 
-                (Dec 2, 
+                (Dec 2 2025, 
                 <a href="https://openreview.net/forum?id=xQQ87B2I3j" target="_blank">
-                    Link
+                    OpenReview
                 </a>).
+                </p>
             </p>
             </div>
         </div>
@@ -593,6 +595,7 @@
     </script>
 </body>
 </html>
+
 
 
 
