--- a/index.html
+++ b/index.html
@@ -392,15 +392,13 @@
         <div class="container">
             <h2>News</h2>
             <div class="news-info">
-                <p>
+            <p>
                 <strong>Presenting at WiML@NeurIPS 2025:</strong>
                 <p>
                 I'll be presenting "<em>Understanding Adversarial Weakness in Vision-Language Models</em>" 
                 at WiML Workshop @ NeurIPS 2025 in San Diego, California 
                 (Dec 2 2025, 
-                <a href="https://openreview.net/forum?id=xQQ87B2I3j" target="_blank">
-                    OpenReview
-                </a>).
+                <a href="https://openreview.net/forum?id=xQQ87B2I3j" target="_blank">Manuscript</a>).
                 </p>
             </p>
             </div>
@@ -595,6 +593,7 @@
     </script>
 </body>
 </html>
+
 
 
 
