correct the navigation issue

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <h1>Maisha Binte Rashid</h1>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#News">News</a></li>
+                <li><a href="#news">News</a></li>
                 <li><a href="#research">Research</a></li>
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -593,6 +593,7 @@
     </script>
 </body>
 </html>
+
 
 
 
